[package]
name = "skoria"
version = "0.1.0"
authors = ["yirvine"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bear-lib-terminal = "*"
lazy_static = "*"
bincode = "*"
serde = {version = "*", features = ["derive"]}
dirs = "*"
base64 = "*"
num = "*"
enum-map="*"
enum-map-derive="*"
enum_primitive="*"