[package]
name = "skoria"
version = "0.1.1"
authors = ["yirvine"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
speedy2d = "1.9"
lazy_static = "*"
bincode = "*"
serde = {version = "*", features = ["derive"]}
dirs = "*"
base64 = "*"
num = "*"
enum-map="*"
enum-map-derive="*"
enum_primitive="*"